# codex-orchestrator

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  openapi.json  pyproject.toml
app/: __init__.py  runtime_flags.py
app/api/: main.py  (+7 more)
docs/: acceptance_criteria.md  action_department_activation_approval_record_builder_boundary_memo.md  action_department_activation_approval_record_format.md  action_department_activation_decision_format.md  architecture.md  codex_automation_prompts.md  codex_continuation_runbook.md  current_brief_template.json  current_work_order_template.json  direction_guard.json  handoff_summary.md  implementation-plan.md  live_validation_checklist.md  management_decision_format.md  management_department_prompt.md  management_department_runbook.md  management_readiness_checklist.md  management_review_template.md  manual_verification_checklist.md  model_governance_policy.md  model_routing_policy.json  mvp_requirements.md  non_goals.md  operational_readiness_runbook.md  operational_startup_runbook.md  pre_production_requirements.md  production_readiness_gaps.md  release_readiness.md  requirement_traceability_matrix.md  review_decision_template.md  review_queue_format.md  roadmap.json  rollback_checklist.md  rollout_plan.md  staging_evidence_template.md  staging_execution_record.md  staging_issue_triage_template.md  staging_signoff_template.md  staging_validation_plan.md  system_requirements.md  (+1 more)
scripts/: full-live-flow.ps1  live-smoke.ps1  local-dev-smoke.ps1  preflight.ps1  release-readiness.ps1  resilience.ps1  smoke.ps1  verify.ps1
(+97 files in other folders)
