[project]
name = "ai-work-system-scaffold"
version = "0.1.0"
description = "Minimal scaffold for intake/orchestrator/specialist AI work system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
